--- a/angular.client/src/app/modules/admin/classrooms/components/registrar-estudiantes/registrar-estudiantes.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/registrar-estudiantes/registrar-estudiantes.component.html
@@ -27,6 +27,12 @@
                                 <mat-icon aria-hidden="false" aria-label="Example home icon"
                                     fontIcon="history"></mat-icon>
                             </button>
+                            <button mat-button class="flex items-center ml-4"
+                                (click)="eliminarDNIsDuplicadosYRegistrados()">
+                                Eliminar DNIs registrados
+                                <mat-icon aria-hidden="false" aria-label="Example home icon"
+                                    fontIcon="delete_sweep"></mat-icon>
+                            </button>
                         </div>
 
                         <form [formGroup]="formEstudiantes" (ngSubmit)="registrarEstudiantesApi()" class="w-full">
@@ -38,7 +44,7 @@
                                     <div class="font-bold text-lg">{{ i + 1 }}.</div>
                                     <mat-form-field class="flex-1">
                                         <input matInput placeholder="Nombres" formControlName="nombres" class="w-full"
-                                            (ngModelChange)="estudiante.get('nombres').setValue($event.trim())">
+                                            (ngModelChange)="estudiante.get('nombres').setValue($event?.trim())">
                                         <mat-error
                                             *ngIf="estudiante.get('nombres').invalid && estudiante.get('nombres').touched">
                                             Falta agregar nombres
@@ -47,7 +53,7 @@
                                     <mat-form-field class="flex-1">
                                         <input matInput placeholder="Apellido Paterno" formControlName="apellidoPaterno"
                                             class="w-full"
-                                            (ngModelChange)="estudiante.get('apellidoPaterno').setValue($event.trim())">
+                                            (ngModelChange)="estudiante.get('apellidoPaterno').setValue($event?.trim())">
                                         <mat-error
                                             *ngIf="estudiante.get('apellidoPaterno').invalid && estudiante.get('apellidoPaterno').touched">
                                             Falta agregar apellido paterno
@@ -56,7 +62,7 @@
                                     <mat-form-field class="flex-1">
                                         <input matInput placeholder="Apellido Materno" formControlName="apellidoMaterno"
                                             class="w-full"
-                                            (ngModelChange)="estudiante.get('apellidoMaterno').setValue($event.trim())">
+                                            (ngModelChange)="estudiante.get('apellidoMaterno').setValue($event?.trim())">
                                         <mat-error
                                             *ngIf="estudiante.get('apellidoMaterno').invalid && estudiante.get('apellidoMaterno').touched">
                                             Falta agregar apellido materno
