chore: Update classroom filters property names to match API response

--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -57,7 +57,7 @@
                     <div>
                         <button mat-fab extended
                             [disabled]="!this.filtrosSeleccionados.Seccion || !this.filtrosSeleccionados.Unidad"
-                            (click)="changeItemOption(ItemOptions.ListarEstudiantes)">
+                            (click)="changeItemOption(itemOption)">
                             <mat-icon svgIcon="filter_alt"></mat-icon>
                             Filtrar
                         </button>
