--- a/angular.client/src/app/modules/admin/classrooms/components/listar-estudiantes/listar-estudiantes.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/listar-estudiantes/listar-estudiantes.component.html
@@ -57,12 +57,8 @@
                         Nombre Completo
                     </th>
                     <td mat-cell *matCellDef="let student">
-                        {{
-                        (student.apellidoPaterno.toLowerCase() + ' '+
-                        student.apellidoMaterno.toLowerCase() + ', ' +
-                        student.nombres.toLowerCase()) | titlecase
-
-                        }}
+                        {{(student.apellidoPaterno + ' '+ student.apellidoMaterno + ', ' + student.nombres) |
+                        titlecase}}
                     </td>
                 </ng-container>
 
