--- a/angular.client/src/app/modules/admin/classrooms/components/reporte-estudiante/reporte-estudiante.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/reporte-estudiante/reporte-estudiante.component.html
@@ -1,83 +1,66 @@
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+<div class="fixed top-0 left-0 z-50 w-full h-full  overflow-y-auto bg-[#f1f5f9]" cdkScrollable>
+
     <!-- Header -->
+    <!-- Header con fondo blanco -->
     <div
-        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
-        <div class="flex-1 min-w-0">
-            <!-- Breadcrumbs -->
-            <div>
-                <div class="hidden sm:flex flex-wrap items-center font-medium">
-                    <div>
-                        <a class="whitespace-nowrap text-primary-500">Dashboard</a>
-                    </div>
-                    <div class="flex items-center ml-1 whitespace-nowrap">
-                        <mat-icon class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-right'"></mat-icon>
-                        <span class="ml-1 text-secondary">Reporte Evaluación Psicológica</span>
-                    </div>
-                </div>
-                <div class="flex sm:hidden">
-                    <a class="inline-flex items-center -ml-1.5 text-secondary font-medium" [routerLink]="'./..'">
-                        <mat-icon class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-left'"></mat-icon>
-                        <span class="ml-1">Back</span>
-                    </a>
-                </div>
-            </div>
+        class="flex flex-col sm:flex-row justify-between items-center p-4 sm:p-6 border-b bg-white dark:bg-transparent">
+        <div class="flex-1">
             <!-- Title -->
-            <div class="mt-2">
-                <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    Reporte Estudiante
-                </h2>
-            </div>
+            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold tracking-tight truncate">Reporte Estudiante</h2>
         </div>
         <!-- Actions -->
-
-        <div class="flex shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <div class="p-2 flex items-center justify-between">
-                <mat-button-toggle-group (change)="getStudentReport()" [(ngModel)]="selectedDimension">
-                    @for(typ of reportTypes; track typ){
-                    <mat-button-toggle [value]="typ">
-                        {{ typ }}
-                    </mat-button-toggle>
-                    }
-                </mat-button-toggle-group>
-                <button mat-button class="ms-3" (click)="returnRoute()">Regresar</button>
-            </div>
+        <div class="mt-4 sm:mt-0 flex gap-2">
+            @for (button of botonesDimensiones; track button) {
+            <button (click)="button.accion()" [ngClass]="getButtonClassDimension(button)"
+                class="px-4 py-2 text-sm sm:text-base rounded-full transition duration-200 ease-in-out">
+                {{ button.texto }}
+            </button>
+            }
+            <!-- Botón para regresar -->
+            <button mat-stroked-button (click)="returnRoute()">
+                Regresar
+            </button>
         </div>
     </div>
 
-    <!-- Main -->
-    <div class="flex-auto p-6 sm:p-10">
+    <!-- Main Content -->
+    <div class=" m-10 p-10 xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl">
+        @if(isLoading){
+        <div class="flex justify-center items-center">
+            <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        </div>
+        } @else {
         <h2>{{ student?.dni }}</h2>
         <h3>{{ student?.mean }}</h3>
         <div>
             @for(scale of scales; track scale){
-            <details class="px-4 bg-white shadow">
-                <summary class="py-2 cursor-pointer flex items-center justify-between">
-                    <span class="font-bold bg-text"
-                        [ngClass]="selectedDimension === 'HSE' ? 'text-green-700' : 'text-orange-400'">{{ scale.name
-                        }}</span>
-                    <span [className]="getMeanClasses(scale.mean) +
-                                                            ' px-2 py-2 rounded text-base flex items-center justify-center text-center'
-                                                        ">
-                        {{getConceptoDeResultadosPsi(scale.mean)}} ({{ scale.mean | number :
-                        ".1-1" }})
+            <details class="mb-4 bg-white shadow">
+                <summary class="p-4 cursor-pointer flex justify-between items-center">
+                    <span class="font-bold"
+                        [ngClass]="filtrosSeleccionados.Dimension == 1 ? 'text-[#1e293b]' : 'text-orange-400'">
+                        {{ scale.name }}
+                    </span>
+                    <span
+                        [className]="getMeanClasses(scale.mean) + ' px-2 py-1 rounded text-sm flex items-center justify-center'">
+                        {{getConceptoDeResultadosPsi(scale.mean)}} ({{ scale.mean | number: ".1-1" }})
                     </span>
                 </summary>
-                <div class="py-2">
-                    <ul class="flex flex-col p-4 gap-4">
-                        <li *ngFor="let indicator of scale.indicators" class="p-2 flex gap-2 items-center">
-                            <span> {{ indicator.name }}</span>
-                            <div [className]="getMeanClasses(indicator.mean) +
-                                                            ' px-2 py-2 rounded text-base flex items-center justify-center text-center'
-                                                        ">
-                                {{getConceptoDeResultadosPsi(indicator.mean)}} ({{ indicator.mean | number :
-                                ".1-1" }}) </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li *ngFor="let indicator of scale.indicators" class="flex gap-2 items-center">
+                            <span class="text-[#64748b]">{{ indicator.name }}</span>
+                            <div
+                                [className]="getMeanClasses(indicator.mean) + ' px-2 py-1 rounded text-sm flex items-center justify-center'">
+                                {{getConceptoDeResultadosPsi(indicator.mean)}} ({{ indicator.mean | number:
+                                ".1-1"
+                                }})
+                            </div>
                         </li>
                     </ul>
                 </div>
             </details>
             }
         </div>
+        }
     </div>
 </div>
