--- a/angular.client/src/app/modules/admin/classrooms/components/reporte-estudiante/reporte-estudiante.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/reporte-estudiante/reporte-estudiante.component.html
@@ -7,19 +7,18 @@
         <div class="flex-1">
             <!-- Title -->
             <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold tracking-tight truncate">Reporte Estudiante</h2>
+            <p class="mt-3 text-lg text-[#4f46e5]">{{this.estudianteNombre | titlecase}}</p>
         </div>
         <!-- Actions -->
         <div class="mt-4 sm:mt-0 flex gap-2">
             @for (button of botonesDimensiones; track button) {
             <button (click)="button.accion()" [ngClass]="getButtonClassDimension(button)"
-                class="px-4 py-2 text-sm sm:text-base rounded-full transition duration-200 ease-in-out">
+                class="px-4 py-2 rounded-full transition duration-200 ease-in-out">
                 {{ button.texto }}
             </button>
             }
             <!-- Botón para regresar -->
-            <button mat-stroked-button (click)="returnRoute()">
-                Regresar
-            </button>
+            <button mat-stroked-button (click)="returnRoute()" class="ms-2"> Regresar </button>
         </div>
     </div>
 
@@ -27,7 +26,8 @@
     <div class=" m-10 p-10 xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl">
         @if(isLoading){
         <div class="flex justify-center items-center">
-            <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+            <mat-progress-spinner mode="indeterminate" [diameter]="50" [strokeWidth]="5">
+            </mat-progress-spinner>
         </div>
         } @else {
         <h2>{{ student?.dni }}</h2>
@@ -36,24 +36,25 @@
             @for(scale of scales; track scale){
             <details class="mb-4 bg-white shadow">
                 <summary class="p-4 cursor-pointer flex justify-between items-center">
-                    <span class="font-bold"
-                        [ngClass]="filtrosSeleccionados.Dimension == 1 ? 'text-[#1e293b]' : 'text-orange-400'">
+                    <span class="font-bold text-lg text-[#1e293b]">
                         {{ scale.name }}
                     </span>
                     <span
-                        [className]="getMeanClasses(scale.mean) + ' px-2 py-1 rounded text-sm flex items-center justify-center'">
+                        [className]="getMeanClasses(scale.mean) + ' px-2 py-1 rounded font-bold text-md  flex items-center justify-center'">
                         {{getConceptoDeResultadosPsi(scale.mean)}} ({{ scale.mean | number: ".1-1" }})
                     </span>
                 </summary>
-                <div class="p-4">
+                <div class="px-4 pt-1 pb-3">
                     <ul class="space-y-2">
                         <li *ngFor="let indicator of scale.indicators" class="flex gap-2 items-center">
-                            <span class="text-[#64748b]">{{ indicator.name }}</span>
-                            <div
-                                [className]="getMeanClasses(indicator.mean) + ' px-2 py-1 rounded text-sm flex items-center justify-center'">
-                                {{getConceptoDeResultadosPsi(indicator.mean)}} ({{ indicator.mean | number:
-                                ".1-1"
-                                }})
+                            <div class="flex w-full items-center  justify-between">
+                                <span class="text-[#64748b] flex-1" style="max-width: 70%;">
+                                    <b>-</b> {{ indicator.name}}
+                                </span>
+                                <div [className]="getMeanClasses(indicator.mean) + ' px-2 py-1 rounded text-sm font-bold flex items-center justify-end'"
+                                    style="flex-shrink: 1;">
+                                    {{getConceptoDeResultadosPsi(indicator.mean)}} ({{ indicator.mean | number:".1-1"}})
+                                </div>
                             </div>
                         </li>
                     </ul>
