--- a/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
@@ -1,32 +1,45 @@
 @if(!visualizarReporteEstudiante){
-<div class="flex h-10 w-min mb-4 overflow-hidden shadow-md rounded-full font-normal">
-    @for (button of botonesDimensiones; track button) {
-    <button (click)="button.accion()" [ngClass]="getButtonClassDimension(button)"
-        class="w-max px-6 py-2 transition-all duration-200 ease-in-out">
-        {{ button.texto }}
-    </button>
-    }
-</div>
-
 <div class="xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
     <div class="p-6">
         <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate">
             <b>Resultados de los estudiantes</b>
         </div>
-
-        <div class="flex h-10 w-min mt-4 overflow-hidden shadow-md rounded-full font-normal">
-            @for (button of botonesEstadosVisibles; track button) {
-            <button (click)="button.accion()" [ngClass]="getButtonClassEstado(button)"
-                class="w-max px-6 py-2 transition-all duration-200 ease-in-out">
-                {{ button.texto }}
-            </button>
-            }
-        </div>
+        <section class="flex justify-between items-start pt-4">
+            <div class="flex h-10 w-min overflow-hidden rounded-full border border-gray-100 shadow-md">
+                @for (button of botonesDimensiones; track button) {
+                <button (click)="button.accion()" [ngClass]="getButtonClassDimension(button)"
+                    class="w-max px-6 py-2 transition-all duration-200 ease-in-out">
+                    {{ button.texto }}
+                </button>
+                }
+            </div>
+            <div class="flex h-10 w-min overflow-hidden rounded-full border border-gray-100 shadow-md">
+                @for (button of botonesEstadosVisibles; track button) {
+                <button (click)="button.accion()" [ngClass]="getButtonClassEstado(button)"
+                    class="w-max px-6 py-2 transition-all duration-200 ease-in-out">
+                    {{ button.texto }}
+                </button>
+                }
+            </div>
+        </section>
     </div>
 
-    @if (reporteSalonFiltrado.data?.length == 0) {
+    @if (reporteSalonFiltrado.data?.length > 0) {
 
     <div class="overflow-x-auto mx-6" (click)="this.reporteSalonFiltrado.sort = this.estudiantesTableMatSort">
+
+        <section class="ms-1 mb-5 flex flex-row items-center content-center w-auto">
+            <div class="h-auto items-center">
+                <p class="text-base">
+                    Existen <b>{{reporteSalonFiltrado.data.length}}</b> estudiantes
+                </p>
+            </div>
+            <a href="#" (click)="exportarExcel_resultadosPsicologicosAula(); $event.preventDefault()"
+                class="mx-3 text-base text-blue-600 hover:text-blue-800 visited:text-purple-600 underline">
+                (Descargar resultados)
+            </a>
+        </section>
+
         <table mat-table [dataSource]="reporteSalonFiltrado" matSort #estudiantesTable class="mat-elevation-z8">
 
             <!-- Nombre Column -->
@@ -78,7 +91,8 @@
                 <th mat-header-cell *matHeaderCellDef>Opciones</th>
                 <td mat-cell *matCellDef="let element">
                     <button [disabled]="element.mean == 0 || element.estadoEvaluacionEstudiante !='F'" mat-icon-button
-                        (click)="estudianteId = element.id; visualizarReporteEstudiante = true">
+                        (click)="estudianteId = element.id;
+                        estudianteNombre = (element.ApellidoPaterno + ' '+ element.ApellidoMaterno + ', ' + element.Nombres); visualizarReporteEstudiante = true">
                         <mat-icon>visibility</mat-icon>
                     </button>
                 </td>
@@ -89,15 +103,15 @@
         </table>
     </div>
     } @else {
-    <div class="bg-blue-100 text-blue-800 text-center p-4 rounded-lg shadow-md">
-        Ningún test psicológico realizado
+    <div class="bg-blue-100 text-blue-800 text-center mx-4 mb-4 p-4 rounded-lg shadow-md">
+        Ningún test psicológico
     </div>
     }
 </div>
 } @else if(visualizarReporteEstudiante && estudianteId && evaluacionPsicologicaAulaId &&
 filtrosSeleccionados.succeeded){
 <app-reporte-estudiante [filtrosSeleccionados]="filtrosSeleccionados" [estudianteId]="estudianteId"
-    [evaluacionPsicologicaAulaId]="evaluacionPsicologicaAulaId"
+    [estudianteNombre]="estudianteNombre" [evaluacionPsicologicaAulaId]="evaluacionPsicologicaAulaId"
     [cargarValoresIniciales]="cargarValoresInicialesReporteEstudiante"
     (regregarReporteSalon)="ocultarReporteEstudiante($event)"></app-reporte-estudiante>
 }
